--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
                                     <version>7.0</version>
                                     <type>jar</type>
                                 </artifactItem>
+                                <!-- for Heroku, see: https://devcenter.heroku.com/articles/java-webapp-runner -->
+                                <artifactItem>
+                                <groupId>com.github.jsimone</groupId>
+                                <artifactId>webapp-runner</artifactId>
+                                <version>8.5.23.0</version>
+                                <destFileName>webapp-runner.jar</destFileName>
+                                </artifactItem>     
                             </artifactItems>
                         </configuration>
                     </execution>
